# dma-poc

./: Cargo.toml  README.md  memory.x  openocd.gdb
examples/: bbqueue.rs  heapless-box.rs  load-elimination.rs  maybeuninit.rs  pin-unsound.rs  single-struct.rs  stack-buffer.rs  static-buffer.rs  unsound-asref.rs  unsound-non-pointer.rs  unsound-non-static.rs  unsound-pin.rs
src/: lib.rs  traits.rs
